--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="header">NFT Lab Analysis</div>
     <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8VPZxQhFpVg_LivYEX2rwJphbIWP2ANxFU3dN4jKR-slKVMSMIrm0wlnzpdXNCn9asYACq26PKIg1/pubchart?oid=462612206&amp;format=interactive"></iframe>
 </body>
 </html>
