--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NFT LAB ANALYSIS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="header">NFT Lab Analysis</div>
-    <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8VPZxQhFpVg_LivYEX2rwJphbIWP2ANxFU3dN4jKR-slKVMSMIrm0wlnzpdXNCn9asYACq26PKIg1/pubchart?oid=462612206&amp;format=interactive"></iframe>
-</body>
+    <div class="image"><iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8VPZxQhFpVg_LivYEX2rwJphbIWP2ANxFU3dN4jKR-slKVMSMIrm0wlnzpdXNCn9asYACq26PKIg1/pubchart?oid=462612206&amp;format=interactive"></iframe>
+    </div>
+        </body>
 </html>
